--- a/src/components/Friendslist/friendlist.module.css
+++ b/src/components/Friendslist/friendlist.module.css
@@ -1,37 +1,34 @@
-.friend {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .avatar {
-    border-radius: 50%;
-    margin-right: 10px;
-  }
-  
-  .online {
-    color: green;
-  }
-  
-  .offline {
-    color: red;
-  }
-  
-  .friendsList {
-    padding-left: 0;
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    gap: 6px;
-  }
-  
-  .friendsCard {
-    width: calc(100% / 5);
-    border: 1px solid #000000;
-    border-radius: 6px;
-    background-color: #ffffff;
-    color: #000000;
-    margin: 0 auto;
-    padding-top: 6px;
-    padding-bottom: 6px;
-  }
+.friendsList {
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
+}
+
+.friendsCard {
+  width: calc(100% / 5);
+  border: 1px solid #000000;
+  border-radius: 6px;
+  background-color: #ffffff;
+  color: #000000;
+  margin: 0 auto;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.friendName {
+  margin-block-end: 5px;
+}
+
+.online {
+  color: rgb(14, 196, 23);
+  margin-block-end: 0;
+  margin-block-start: 0.5px;
+}
+
+.offline {
+  color: rgb(246, 32, 32);
+  margin-block-end: 0;
+  margin-block-start: 0.5px;
+}
